[build-system]
requires = ["setuptools>=61.0","boto3>=boto3-1.24","dateutil"]
build-backend = "setuptools.build_meta"

[project]
name = "ehashshift"
version = "0.0.1"
description = "Package used to hash fields and shift dates."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EmoryBHC/gindata-python-utilities"
"Bug Tracker" = "https://github.com/EmoryBHC/gindata-python-utilities/issues"
